# y-server

./: .env  Cargo.toml  README.md
migrations/: 20240723180225_create_users_table.sql  20240723181102_create_posts_table.sql
queries/: create_post.sql  get_user.sql  id_to_username.sql  register_user.sql
src/: main.rs
src/auth/: mod.rs  token.rs  token_manager.rs  user_auth_request.rs
src/model/: post.rs  user.rs
src/post/: post.rs
src/token/: mod.rs  token.rs  token_manager.rs
src/user/: user.rs
